--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "@testing-library/react": "^13.3.0",
       "@testing-library/user-event": "^13.5.0",
       "axios": "^0.27.2",
+      "concurrently": "^7.3.0",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-redux": "^8.0.2",
@@ -23,7 +24,7 @@
       "web-vitals": "^2.1.4"
    },
    "scripts": {
-      "start": "react-scripts start",
+      "start": "concurrently \"react-scripts start\" \"npx json-server data.json --port 3100\"",
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
