--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "version": "0.1.0",
    "private": true,
    "dependencies": {
+      "@ant-design/icons": "^4.7.0",
       "@emotion/react": "^11.10.0",
       "@emotion/styled": "^11.10.0",
       "@fontsource/roboto": "^4.5.8",
@@ -12,7 +13,10 @@
       "@testing-library/jest-dom": "^5.16.4",
       "@testing-library/react": "^13.3.0",
       "@testing-library/user-event": "^13.5.0",
+      "animate.css": "^4.1.1",
       "concurrently": "^7.3.0",
+      "firebase": "^9.9.2",
+      "formik": "^2.2.9",
       "react": "^18.2.0",
       "react-dom": "^18.2.0",
       "react-redux": "^8.0.2",
@@ -23,7 +27,8 @@
       "reselect": "^4.1.6",
       "sass": "^1.54.0",
       "swiper": "^8.3.2",
-      "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+      "yup": "^0.32.11"
    },
    "scripts": {
       "start": "concurrently \"react-scripts start\" \"npx json-server data.json --port 3100\"",
