--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
       "@emotion/styled": "^11.10.0",
       "@fontsource/roboto": "^4.5.8",
       "@mui/icons-material": "^5.8.4",
+      "@mui/lab": "^5.0.0-alpha.97",
       "@mui/material": "^5.9.2",
       "@reduxjs/toolkit": "^1.8.4",
       "@testing-library/jest-dom": "^5.16.4",
