--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
    },
    "scripts": {
       "start": "concurrently \"react-scripts start\" \"npx json-server data.json --port 3100\"",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
+      "build": "react-scripts build"
    },
    "eslintConfig": {
       "extends": [
