--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
       "@testing-library/react": "^13.3.0",
       "@testing-library/user-event": "^13.5.0",
       "animate.css": "^4.1.1",
-      "concurrently": "^7.3.0",
+      "axios": "^0.27.2",
       "firebase": "^9.9.2",
       "formik": "^2.2.9",
       "react": "^18.2.0",
@@ -34,7 +34,7 @@
       "yup": "^0.32.11"
    },
    "scripts": {
-      "start": "concurrently \"react-scripts start\" \"npx json-server data.json --port 3100\"",
+      "start": "react-scripts start",
       "build": "react-scripts build"
    },
    "eslintConfig": {
